// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapItemCard.vue match snapshot - {collapsible: false, collapsed: false} 1`] = `
<div class="v-card v-card--hover v-card--outlined v-sheet theme--light">
  <div style="cursor: default;">
    <div class="layout ma-0 px-3 row wrap">
      <div class="flex xs12 md4">
        <div class="caption grey--text">Name</div>
        <div class="font-weight-medium primary--text"><span><a href="/maps/item/map123456" class="">map123456</a></span></div>
      </div>
      <div class="flex xs6 md4">
        <div class="caption grey--text">Date posted</div>
        <div>2020-01-31</div>
      </div>
      <div class="flex xs5 md3">
        <div class="caption grey--text">Mapper</div>
        <div>XYZ</div>
      </div>
      <div class="flex xs1 md1 align-self-end">
        <!---->
      </div>
    </div>
    <div class="layout mx-0 mb-3 px-3 row wrap">
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Paths</div>
        <ul></ul>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Note</div>
        <div>
          <!---->
        </div>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Beams</div>
        <ul></ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`MapItemCard.vue match snapshot - {collapsible: false, collapsed: true} 1`] = `
<div class="v-card v-card--hover v-card--outlined v-sheet theme--light">
  <div style="cursor: default;">
    <div class="layout ma-0 px-3 row wrap">
      <div class="flex xs12 md4">
        <div class="caption grey--text">Name</div>
        <div class="font-weight-medium primary--text"><span><a href="/maps/item/map123456" class="">map123456</a></span></div>
      </div>
      <div class="flex xs6 md4">
        <div class="caption grey--text">Date posted</div>
        <div>2020-01-31</div>
      </div>
      <div class="flex xs5 md3">
        <div class="caption grey--text">Mapper</div>
        <div>XYZ</div>
      </div>
      <div class="flex xs1 md1 align-self-end">
        <!---->
      </div>
    </div>
    <div class="layout mx-0 mb-3 px-3 row wrap">
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Paths</div>
        <ul></ul>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Note</div>
        <div>
          <!---->
        </div>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Beams</div>
        <ul></ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`MapItemCard.vue match snapshot - {collapsible: true, collapsed: false} 1`] = `
<div class="v-card v-card--hover v-card--outlined v-sheet theme--light">
  <div style="cursor: default;">
    <div class="layout ma-0 px-3 row wrap">
      <div class="flex xs12 md4">
        <div class="caption grey--text">Name</div>
        <div class="font-weight-medium primary--text"><span><a href="/maps/item/map123456" class="">map123456</a></span></div>
      </div>
      <div class="flex xs6 md4">
        <div class="caption grey--text">Date posted</div>
        <div>2020-01-31</div>
      </div>
      <div class="flex xs5 md3">
        <div class="caption grey--text">Mapper</div>
        <div>XYZ</div>
      </div>
      <div class="flex xs1 md1 align-self-end">
        <div>
          <div class="layout justify-end"><span class="v-tooltip v-tooltip--bottom"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"></div><button type="button" class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-up theme--light"></i></span></button></span></div>
        </div>
      </div>
    </div>
    <div class="layout mx-0 mb-3 px-3 row wrap">
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Paths</div>
        <ul></ul>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Note</div>
        <div>
          <!---->
        </div>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Beams</div>
        <ul></ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`MapItemCard.vue match snapshot - {collapsible: true, collapsed: true} 1`] = `
<div class="v-card v-card--hover v-card--outlined v-sheet theme--light">
  <div style="cursor: default;">
    <div class="layout ma-0 px-3 row wrap">
      <div class="flex xs12 md4">
        <div class="caption grey--text">Name</div>
        <div class="font-weight-medium primary--text"><span><a href="/maps/item/map123456" class="">map123456</a></span></div>
      </div>
      <div class="flex xs6 md4">
        <div class="caption grey--text">Date posted</div>
        <div>2020-01-31</div>
      </div>
      <div class="flex xs5 md3">
        <div class="caption grey--text">Mapper</div>
        <div>XYZ</div>
      </div>
      <div class="flex xs1 md1 align-self-end">
        <div>
          <div class="layout justify-end"><span class="v-tooltip v-tooltip--bottom"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"></div><button type="button" class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></span></button></span></div>
        </div>
      </div>
    </div>
    <div class="layout mx-0 mb-3 px-3 row wrap" style="display: none;">
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Paths</div>
        <ul></ul>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Note</div>
        <div>
          <!---->
        </div>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Beams</div>
        <ul></ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`MapItemCard.vue match snapshot 1`] = `
<div class="v-card v-card--hover v-card--outlined v-sheet theme--light">
  <div style="cursor: default;">
    <div class="layout ma-0 px-3 row wrap">
      <div class="flex xs12 md4">
        <div class="caption grey--text">Name</div>
        <div class="font-weight-medium primary--text"><span><a href="/maps/item/map123456" class="">map123456</a></span></div>
      </div>
      <div class="flex xs6 md4">
        <div class="caption grey--text">Date posted</div>
        <div>2020-01-31</div>
      </div>
      <div class="flex xs5 md3">
        <div class="caption grey--text">Mapper</div>
        <div>XYZ</div>
      </div>
      <div class="flex xs1 md1 align-self-end">
        <!---->
      </div>
    </div>
    <div class="layout mx-0 mb-3 px-3 row wrap">
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Paths</div>
        <ul></ul>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Note</div>
        <div>
          <!---->
        </div>
      </div>
      <div class="flex xs12 md8 offset-md-4">
        <div class="caption grey--text">Beams</div>
        <ul></ul>
      </div>
    </div>
  </div>
</div>
`;
